--- a/src/style/global.css
+++ b/src/style/global.css
@@ -953,6 +953,14 @@ footer .teks-footer img {
     margin-top: 230px;
   }
 
+  .sampah h2{
+
+    font-size: 2rem;
+
+    width: 80%;
+
+  }
+
   .teks-footer {
 
     display: block;
